objects/FFM_Login_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Used For Session Id</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Helps to identify from which application password was requested</description>
        <label>Application</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web Service</fullName>
                </value>
                <value>
                    <fullName>Maestro</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Login</label>
        <referenceTo>FFM_LoginTracker__c</referenceTo>
        <relationshipLabel>Login Audits</relationshipLabel>
        <relationshipName>Login_Audits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Login_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Login Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LA-{000000}</displayFormat>
        <label>Login Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Login Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>